Revert "fix: letter-spacing & text-transform making text wrap"
This reverts commit 8b9d9b615cad7e79e463e968690edf0bec91d314.

--- a/app/stylus/tooltip.styl
+++ b/app/stylus/tooltip.styl
@@ -40,6 +40,7 @@ tooltip-border-color = rgb(100, 100, 100)
   margin-left -117px
   font-style italic
   font-weight 400
+  letter-spacing 1px
   font-size 1.25em
   text-align center
   cursor pointer
